bug #67600, checking in for Ulrich Drepper <drepper@cygnus.org>, sr=scc, r=jst.  |#undef| |printf| macros before un-conditionally redefining them, else there are warnings.